Fix some text overflow issues

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -368,12 +368,20 @@ button.open:hover {
 
 /* project content */
 
-.table-controls {
-   padding-top: 26px;
+.project-table {
+    background: repeating-linear-gradient(45deg, #ddd, #ddd 10px, #f5f5f5 10px, #f5f5f5 20px);
+    table-layout: fixed;
 }
 
-.project-table > tbody > tr > td:first-child {
-    width: 1%;
+.project-table td {
+    overflow: hidden;
+    white-space: nowrap;
+    vertical-align: middle;
+    text-overflow: ellipsis;
+}
+
+.project-table > thead > tr > th:first-child {
+    width: 27px;
 }
 
 .project-table th, .version-table th {
@@ -382,30 +390,15 @@ button.open:hover {
 }
 
 .project-table > tbody > tr > td {
-    min-width: 30px;
     font-size: 18px;
     white-space: nowrap;
-    overflow: hidden;
-    vertical-align: middle;
 }
 
 .project-table .name {
-    width: 1%;
-    max-width: 457px;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .project-table .name > i {
     font-size: 16px;
-}
-
-.project-table .author {
-    text-align: right;
-}
-
-.project-table {
-    background: repeating-linear-gradient(45deg, #ddd, #ddd 10px, #f5f5f5 10px, #f5f5f5 20px);
 }
 
 .project-table tr:not(.project-hidden) {
@@ -414,6 +407,11 @@ button.open:hover {
 
 .project-panel .panel-footer {
     height: 34px;
+}
+
+.project-table .author {
+    width: 50px;
+    text-align: right;
 }
 
 .project-table .stat {
@@ -472,22 +470,23 @@ button.open:hover {
 .project-header {
     padding-top: 20px;
     padding-bottom: 10px;
-    display: table;
     white-space: nowrap;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .project-header > h1 {
-    padding-right: 10px;
-    display: table-cell;
     font-size: 20px;
     font-weight: normal;
+    float: left;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-right: 5px;
 }
 
 .project-header > i {
-    display: table-cell;
     font-size: 16px;
-    max-width: 950px;
-    overflow: hidden;
     text-overflow: ellipsis;
 }
 
@@ -1081,6 +1080,11 @@ a > .fa {
 
 .list-members > li > span {
     padding: 6px;
+}
+
+.list-members .list-group-item {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .list-members .username > .user-avatar > img {
